# LoreBinders

./: .breakpoints  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  _managers.py  _titles.py  _types.py  attributes.py  binders.py  book.py  changelog.md  chaptertypes.txt  character_analysis.py  characteranalysis.py  claude.md  common_functions.py  conftest.py  convert_file.py  data_cleaner.py  data_cleaning.py  documentation notes.txt  documentation-notes.md  error_handler.py  file_handling.py  json_repair.py  json_repairer.py  license.txt  main.py  make_pdf.py  mypy.ini  plotanalysis.py  pyproject.toml  requirements.txt  send_email.py  smtp.py  storystructure_descriptions.txt  storystructures.txt  supabase_db.py  tach.yml  (+1 more)
.qlty/: qlty.toml
ai_classes/: __init__.py  ai_factory.py  ai_interface.py  model_details.json  openai.py  openai_class.py
email_handler/: email_content.html  send_email.py
lb_new/: README.md  book.py  data_cleaner.py  error_handler.py  file_handling.py  json_repair.py  license.txt  send_email.py
lb_new/ai_classes/: ai_interface.py  exceptions.py
resolve1/: attribute_table.json  chapter_chunks.json  chapter_lists.json
src/lorebinders/: __init__.py  _decorators.py  _exceptions.py  _managers.py  _titles.py  _type_annotations.py  _types.py  abstract_name_tools.py  ai_model_handler.py  attributes.py  binders.py  book.py  book_dict.py  build_lorebinder.py  convert_book_file.py  data_cleaner.py  error_handler.py  file_handling.py  json_repairer.py  json_tools.py  main.py  make_pdf.py  markdown_parser.py  name_tools.py  prompt_generator.py  role_script.py  sort_names.py  start_ai_initialization.py  user_input.py
src/lorebinders/ai/: __init__.py  ai_factory.py  ai_interface.py  ai_type.py  api_error_handler.py  exceptions.py  rate_limit.py  save_data.py
src/lorebinders/ai/ai_classes/: __init__.py  api_anthropic.py  api_google.py  api_openai.py
src/lorebinders/ai/ai_models/: __init__.py  _model_schema.py  json_file_model_handler.py  sql_model_manager.py  sql_provider_handler.py  sqlite_model_handler.py  supabase_model_handler.py
src/lorebinders/ai/rate_limiters/: __init__.py  file_rate_limit_handler.py
src/lorebinders/ai_classes/: __init__.py  _model_schema.py  ai_factory.py  ai_interface.py  api_openai.py  exceptions.py  model_details.json  openai.py
src/lorebinders/email_handler/: send_email.py
src/lorebinders/email_handlers/: __init__.py  email_content.html  smtp_handler.py
src/lorebinders/instructions/: character_instructions.txt  name_extractor_instructions.txt  name_extractor_sys_prompt.txt
src/lorebinders/instructions/markdown/: character_instructions.txt  name_analyzer_base_instructions.txt  settings_instructions.txt
src/lorebinders/json_files/: ai_models.json
src/lorebinders/name_tools/: __init__.py  name_analyzer.py  name_extractor.py  name_summarizer.py  name_tools.py
src/lorebinders/rate_limiters/: file_rate_limit_handler.py
stubs/: binders.pyi  book.pyi  data_cleaner.pyi  error_handler.pyi  file_handling.pyi  json_repairer.pyi  json_tools.pyi  main.pyi  make_pdf.pyi
stubs/ai_classes/: ai_factory.pyi  ai_interface.pyi  exceptions.pyi  openai.pyi
stubs/email_handler/email_handler/: send_email.pyi
tests/: _decorators.py  test_ai_factory.py  test_ai_interface.py  test_api_openai.py  test_attributes.py  test_book.py  test_build_lorebinder.py  test_data_cleaner.py  test_decorators.py  test_error_handler.py  test_file_handling.py  test_json_file_model_manager.py  test_json_tools.py  test_main.py  test_name_analyzer.py  test_name_extractor.py  test_name_summarizer.py  test_smtp_handler.py  test_sort_names.py  test_sql_provider_handler.py  test_user_input.py
tests/ai/: test_ai_factory.py  test_ai_interface.py  test_error_handler.py  test_rate_limit.py
tests/ai/ai_classes/: test_api_openai.py
tests/ai/ai_models/: test_json_file_model_manager.py
tests/email_handlers/: test_smtp_handler.py
tests/integration/: test_data_cleaner.py  test_make_pdf.py  test_sort_names.py
tests/integration/email_handlers/: test_smtp_handler.py
tests/name_tools/: conftest.py  fixtures.py  name_fixtures.py  test_name_analyzer.py  test_name_extractor.py  test_name_summarizer.py
tests/unit/: test_book.py  test_book_dict.py  test_build_lorebinder.py  test_convert_book_file.py  test_data_cleaner.py  test_file_handling.py  test_json_tools.py  test_make_pdf.py  test_prompt_generator.py  test_sort_names.py  test_start_ai_initialization.py  test_user_input.py
tests/unit/ai/: test_ai_factory.py  test_ai_interface.py  test_error_handler.py  test_rate_limit.py  test_save_data.py
tests/unit/ai/ai_classes/: test_api_openai.py
tests/unit/ai/ai_models/: test_json_file_model_manager.py  test_sql_provider_handler.py
tests/unit/ai/rate_limiters/: test_file_rate_limit_handler.py
tests/unit/email_handlers/: test_smtp_handler.py
tests/unit/name_tools/: test_name_analyzer.py  test_name_extractor.py  test_name_tools.py
to_refactor/: character_analysis.py  common_functions.py  data_cleaning.py  utils.py
