[project]
name = "lorebinders"
version = "0.2.0"
description = "Create a story bible with AI from a finished manuscript"
readme = "README.md"
authors = [{name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Other Audience",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing"
]
requires-python = ">= 3.10"
dependencies = [

    "ebook2text>=1.1.2",

    "json-repair>=0.29.8",

    "loguru>=0.7.2",

    "pydantic>=2.9.2",

    "python-decouple>=3.8",

    "reportlab>=4.2.5",
]

[project.optional-dependencies]
openai = [
    "openai>=1.51.0",
    "tiktoken>=0.8.0",
]
supabase = [
    "supasaas",
]

[project.urls]
"Homepage" = "https://prosepal.io"
"Source" = "https://github.com/ashrobertsdragon/LoreBinders"
"Issues" = "https://github.com/ashrobertsdragon/LoreBinders/issues"
"Pull Requests" = "https://github.com/ashrobertsdragon/LoreBinders/pulls"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.6.9",
    "pre-commit>=4.0.0",
]

[tool.uv.sources]
supasaas = { git = "https://github.com/ashrobertsdragon/SupaSaaS.git" }

[tool.ruff]
line-length = 79
force-exclude = true
exclude = [".git", ".__pycache__", ".venv", ".vscode", "test*", "stubs" , "temp.py", "*cov", "*cache", "work", "*.json"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "PTH", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "local-folder", "first-party"]

[tool.pytest.ini_options]
addopts = "-v --cov=lorebinders --cov-report=html --html=test-results/report.html"
pythonpath = [
  "src"
]

[tool.coverage.run]
omit = ["*/_types.py"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]
